[package]
name = "lunardb_orm"
description = "A ORM library for LunarDB"
authors = ["Kazooki123", "StarloExoliz"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls"] }
dotenv = "0.15"
